# llm-compressor

examples/qwen3_quantization_demo/: README.md  pyproject.toml  run.py
examples/qwen3_quantization_demo/config/: quant_config.yaml  recipe_w8a16_group_quant.yaml
examples/qwen3_quantization_demo/dataset/: calib.json
